@@ -2566,6 +2566,11 @@ command to generate the output files.
   <mime-type type="text/x-chdr">
     <sub-class-of type="text/plain"/>
     <_comment>C header</_comment>
+    <magic priority="50">
+      <match type="string" value="/*" offset="0"/>
+      <match type="string" value="//" offset="0"/>
+      <match type="string" value="#include" offset="0"/>
+    </magic>
     <glob pattern="*.h"/>
     <glob pattern="*.h++"/>
     <glob pattern="*.hp"/>
@@ -2589,6 +2594,11 @@ command to generate the output files.
     <sub-class-of type="text/plain"/>
     <_comment>C source code</_comment>
     <glob pattern="*.c"/>
+    <magic priority="50">
+      <match type="string" value="/*" offset="0"/>
+      <match type="string" value="//" offset="0"/>
+      <match type="string" value="#include" offset="0"/>
+    </magic>
   </mime-type>
   <mime-type type="text/x-csharp">
     <sub-class-of type="text/plain"/>
@@ -2743,7 +2753,22 @@ command to generate the output files.
   <mime-type type="text/x-objcsrc">
     <sub-class-of type="text/plain"/>
     <_comment>Objective-C source code</_comment>
+    <magic priority="50">
+      <match type="string" value="/*" offset="0"/>
+      <match type="string" value="//" offset="0"/>
+      <match type="string" value="#import" offset="0"/>
+    </magic>
     <glob pattern="*.m"/>
+  </mime-type>
+  <mime-type type="text/x-matlab">
+    <sub-class-of type="text/plain"/>
+    <_comment>MATLAB script/function</_comment>
+    <magic priority="50">
+      <match type="string" value="%" offset="0"/>
+      <match type="string" value="function" offset="0"/>
+    </magic>
+    <glob pattern="*.m"/>
+    <alias type="text/x-octave"/>
   </mime-type>
   <mime-type type="text/x-pascal">
     <sub-class-of type="text/plain"/>
