@@ -1,3 +1,8 @@
+2005-01-03  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: Add Objective-C, C and C header magic
+	patterns, add matlab MIME type and magic patterns. Fixes #3971.
+
 2005-12-31  Christian Neumair  <chris@gnome-de.org>
 
 	* freedesktop.org.xml.in: Add XML-style comment magic pattern to XML
